syntax="proto3";

// this will be package of the generated code
package model;
option go_package = "/model";

// Message structure
message reqCustomerById {
    // Field number 1-15 use 1 byte, while field 16th - 2047th use 2 bytes
    // So, the first 15 fields should be reserved for fields that are used oftenly
    int32 searchId = 1;
}

message resCustomerById {
    message Result {
        string id = 1;
        string username = 2;
        string email = 3;
      }; 
    repeated Result results = 1;
}

service CustomerService {
    // PingPongService has a method, which is StartPing
    rpc GetCustomerById (reqCustomerById) returns (resCustomerById);
}